<resources>
    <string name="app_name">Lock Thinks App</string>
    <string name="lock_thinks_logo">Lock Thinks App Logo</string>
    <string name="lock_thinks_img_nfc_contact">Imagem Contato NFC</string>
    <string name="lock_thinks_label_tag">TAG</string>
    <string name="lock_thinks_label_not_found">Não Registrada</string>
    <string name="lock_thinks_label_add_tag">Add Tag</string>
    <string name="lock_thinks_label_ok">OK</string>
    <string name="lock_thinks_tag_label_open">Abrir Cadeado</string>
    <string name="lock_thinks_tag_label_close">Fechar Cadeado</string>
    <string name="lock_thinks_label_snack_error">Chave incorreta! - Tente novamentente</string>
    <string name="lock_thinks_label_snack_success">Chave atribuída com sucesso! !!!</string>
    <string name="lock_thinks_label_come_closer">Aproxime-se da Tag</string>
    <string name="lock_thinks_label_come_closer_to_reader">Para efetuar  a leitura\n</string>
    <string name="lock_thinks_nfc_label_activate">NFC está desativado</string>
    <string name="lock_thinks_nfc_active_setting">Ativar NFC</string>
    <string name="lock_thinks_nfc_not_found">Este dispositivo não suporta NFC</string>
    <string name="lock_thinks_nfc_not_approached">Nao foi detectada a aproximação</string>
</resources>