<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout

        android:id="@+id/tag_not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="290dp"
            android:layout_height="175dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/lock_tag_nfc_contact_img"
            android:contentDescription="@string/lock_thinks_img_nfc_contact"
            android:minWidth="290dp"
            android:minHeight="175dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lock_thinks_label_tag"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontWeight="800" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_thinks_label_not_found"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"

            app:fontWeight="800" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lock_tag_close"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/lock_tag_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/lock_tag_close"
            android:contentDescription="@string/lock_thinks_img_nfc_contact"
            android:minWidth="200dp"
            android:minHeight="200dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lock_tag_btn_open"
            style="@style/Theme.LockThinksApp.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_thinks_tag_label_open"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:fontWeight="800" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lock_tag_open"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/lock_tag_img_open"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/lock_tag_open"
            android:contentDescription="@string/lock_thinks_img_nfc_contact"
            android:minWidth="200dp"
            android:minHeight="200dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lock_tag_btn_close"
            style="@style/Theme.LockThinksApp.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/lock_thinks_tag_label_close"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:fontWeight="800" />


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/lock_thinks_label_add_tag"
        android:src="@drawable/add_tag"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>